Changing Position structure + linter.
